--- a/lab2/app.css
+++ b/lab2/app.css
@@ -7,11 +7,8 @@ input[type=text]{
     text-align: left;
 }
 
-#n1
-{
-	float:right;
-	margin:5px;
-}
+
+
 .flex-container {
   display: flex;
    flex-direction: row;
@@ -27,10 +24,10 @@ input[type=text]{
 }
 h1
 {
-	color:white;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	color:black;
+	font-family: Blippo, fantasy;
 	 font-style: oblique;
-	 font-size: 40px;
+	 font-size: 60px;
 	
 }
 .f1{
